hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__iwiden_s_1_6@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1(i8 %0) {
alloca_block:
  %"0" = alloca i8, align 1
  %"01" = alloca i64, align 8
  %"2_0" = alloca i8, align 1
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, i8* %"0", align 1
  %"02" = load i8, i8* %"0", align 1
  store i8 %"02", i8* %"2_0", align 1
  %"2_03" = load i8, i8* %"2_0", align 1
  %"2_04" = load i8, i8* %"2_0", align 1
  %1 = sext i8 %"2_04" to i64
  store i64 %1, i64* %"4_0", align 4
  %"4_05" = load i64, i64* %"4_0", align 4
  store i64 %"4_05", i64* %"01", align 4
  %"06" = load i64, i64* %"01", align 4
  ret i64 %"06"
}
